--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-beautifulsoup4
-requests
-pandas
-openpyxl
-Pillow
+streamlit==1.45.0
+pandas==2.2.3
+requests==2.32.3
+beautifulsoup4==4.12.3
+openpyxl==3.1.5
+numpy==2.2.0
+Pillow==11.2.0
