--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ requests==2.32.3
 beautifulsoup4==4.12.3
 openpyxl==3.1.5
 numpy==2.2.0
-
+opencv-python==4.5.5.64
+Pillow==9.1.0  # Version stable de Pillow
